Fixed images not showing on chrome mobile bug

--- a/css/portfolio-gallery.css
+++ b/css/portfolio-gallery.css
@@ -35,6 +35,7 @@
   padding: 20px 30px;
   display: grid;
   grid-template-rows: 1fr auto auto;
+  transition: opacity 0.2s ease-out;
 }
 .gallery-hover:hover {
   opacity: 1;
@@ -101,5 +102,14 @@
   .portfolio-gallery {
     flex-direction: column;
     align-items: center;
+  }
+
+  .gallery-image {
+    overflow: unset;
+  }
+
+  .gallery-image > img {
+    transform: scale(1);
+    border-radius: 10px;
   }
 }
